--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -108,7 +108,7 @@
           position: absolute;
           top: 15px;
           left: 16px;
-          content: "YYYY-MM-DD";
+          content: 'YYYY-MM-DD';
           display: inline-block;
           color: white;
           font-size: 20px;
